# sre-ai-hub

./: .dockerignore  .gitignore  Dockerfile  README.md  example.env  pyproject.toml  requirements.txt
.github/workflows/: docker-images.yml  ecr-images.yml  validate.yml
agents/: operator.py  sage.py  scholar.py  settings.py
api/: main.py  settings.py
api/routes/: agents.py  playground.py  status.py  teams.py  v1_router.py
db/: README.md  session.py  settings.py
db/migrations/: env.py
scripts/: _utils.sh  build_dev_image.sh  build_prd_image.sh  dev_setup.sh  entrypoint.sh  format.sh  generate_requirements.sh  test.sh  validate.sh
teams/: finance_researcher.py  multi_language.py  operator.py  settings.py
utils/: log.py
workflows/: blog_post_generator.py  investment_report_generator.py  settings.py
workspace/: dev_resources.py  prd_resources.py  settings.py
workspace/example_secrets/: dev_api_secrets.yml  prd_api_secrets.yml  prd_db_secrets.yml
